tests/NormalTests/paczka1/fuzzy1/40108158.err
Error in line 3: GwQcCf A115 99,5
Error in line 5: GwQcCf A817 81,6
Error in line 7: jp1dGl2 A817 43,0
Error in line 8: jp1dGl2 A115 50,7
Error in line 19: jp1dGl2 S720 36,3
Error in line 21: jp1dGl2 S332 68,8
Error in line 15: S332 A817 30,9
Error in line 23: jp1dGl2 S720 92,2
